Fix spacing and borders on containers

--- a/src/components/forumform.css
+++ b/src/components/forumform.css
@@ -20,10 +20,7 @@
   }
 
   .textarea-outline {
-    /* border: 5px solid rgb(247, 128, 128); */
-
-    /* border: 5px solid white;
-    box-shadow: 0 0 0 5px #f86969; */
+    /* box-shadow: 0 0 0 5px #f86969; */
 
 
     border: 5px solid  #f86969;
